2009-12-27  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: Optional Interfaces: Mention how 
	to check with telepathy-glib. We need dbus-glib and Python examples 
	here too.
	Connection: Added a Presence sub-section with the example.

2009-12-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: Optional Interfaces: Mention that 
	ConnectionManager and Channel also have optional interfaces (not just 
	Connection), and mention the new Interfaces property.

2009-12-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: API Conventions: Mention the 
	Request/Get distinction and link to the telepathy-glib conventions.
	Removed the Asynchronous Calls section because we dealt with that here 
	and in the Using D-Bus section.

2009-12-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: Handles: Write this section. 
	Removed the main Handles chapter because a) It was planned to cover the 
	same stuff and b) It should be covered very early.

2009-12-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: D-Bus, telepathy-glib: Explicitly 
	point out that we are dealing with proxies, not the objects themselves.
	Added a Headers and Linking sub-section.
	ConnectionManager chapter: Mention how to list connection managers and 
	their proxies, with links to the spec and reference documetnation. 
	Move the list_protocols example here.
	Connection: Mention RequestConnection() and the telepathy-glib 
	equivalent. 

2009-12-23  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: Correct the use of the indexterm 
	tags. Their contents are not displayed in the main text.

2009-12-23  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: telepathy-glib: Mention sync/async 
	prefixes. Mention generated/hand-coded prefixes. Mention 
	call_when_ready() functions.
