@@ -1,6 +1,6 @@
 include $(top_srcdir)/docs/Makefile_web.am_fragment
 
-example_dirs = basics_dbus_glib basics_dbus_python connect list_all_protocols list_contacts set_presence send_message
+example_dirs = basics_dbus_glib_methods basics_dbus_glib_properties basics_dbus_python_methods basics_dbus_python_properties connect list_all_protocols list_contacts set_presence send_message
 
 SUBDIRS = $(example_dirs)
 
